# Sem_prace2

./: AsciiImage.cpp  AsciiImage.h  BmpReader.cpp  BmpReader.h  BrightFilter.cpp  BrightFilter.h  CMakeLists.txt  ConvFilter.cpp  ConvFilter.h  Image.cpp  Image.h  ImageFilter.cpp  ImageFilter.h  ImageReader.cpp  ImageReader.h  MirrorFilter.cpp  MirrorFilter.h  NegativeFilter.cpp  NegativeFilter.h  Outputer.cpp  Outputer.h  Pixel.cpp  Pixel.h  PngReader.cpp  PngReader.h  SizeFilter.cpp  SizeFilter.h  main.cpp
